final-devops-project/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: {app: board}
  template:
    metadata:
      labels: {app: board}
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        fsGroup: 65532
      containers:
        - name: board
          image: ghcr.io/godatcode/devops-homework-arka-ghosh:latest
          imagePullPolicy: Always
          ports: [{containerPort: 8080, name: http}]
          env: [{name: DATA_DIR, value: /data}]
          volumeMounts: [{name: data, mountPath: /data}]
          readinessProbe:
            httpGet: {path: /readyz, port: http}
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet: {path: /healthz, port: http}
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests: {cpu: 50m, memory: 64Mi}
            limits: {cpu: 500m, memory: 256Mi}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: {drop: [ALL]}
      volumes:
        - name: data
          persistentVolumeClaim: {claimName: board-data}
