final-devops-project/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: board
spec:
  type: ClusterIP
  selector: {app: board}
  ports: [{port: 80, targetPort: http, name: http}]
