final-devops-project/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board
spec:
  ingressClassName: nginx
  rules:
    - host: board.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: board
                port: {number: 80}
